// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`transformIndentationMarks should remove indentation marks from headings (mutiple content) inside table cells 1`] = `
{
  "content": [
    {
      "attrs": {
        "isNumberColumnEnabled": false,
        "layout": "default",
        "localId": "123",
      },
      "content": [
        {
          "content": [
            {
              "attrs": {},
              "content": [
                {
                  "attrs": {
                    "level": 1,
                  },
                  "content": [
                    {
                      "text": "heading",
                      "type": "text",
                    },
                    {
                      "type": "hardBreak",
                    },
                  ],
                  "marks": [],
                  "type": "heading",
                },
                {
                  "content": [
                    {
                      "content": [
                        {
                          "content": [],
                          "type": "paragraph",
                        },
                      ],
                      "type": "listItem",
                    },
                  ],
                  "type": "bulletList",
                },
              ],
              "type": "tableCell",
            },
            {
              "attrs": {},
              "content": [
                {
                  "attrs": {
                    "level": 1,
                  },
                  "content": [
                    {
                      "text": "another-heading",
                      "type": "text",
                    },
                    {
                      "type": "hardBreak",
                    },
                  ],
                  "marks": [],
                  "type": "heading",
                },
              ],
              "type": "tableCell",
            },
          ],
          "type": "tableRow",
        },
      ],
      "type": "table",
    },
  ],
  "type": "doc",
  "version": 1,
}
`;

exports[`transformIndentationMarks should remove indentation marks from headings (mutiple content) inside table headers 1`] = `
{
  "content": [
    {
      "attrs": {
        "isNumberColumnEnabled": false,
        "layout": "default",
        "localId": "123",
      },
      "content": [
        {
          "content": [
            {
              "attrs": {},
              "content": [
                {
                  "attrs": {
                    "level": 1,
                  },
                  "content": [
                    {
                      "text": "heading",
                      "type": "text",
                    },
                    {
                      "type": "hardBreak",
                    },
                  ],
                  "marks": [],
                  "type": "heading",
                },
                {
                  "content": [
                    {
                      "content": [
                        {
                          "content": [],
                          "type": "paragraph",
                        },
                      ],
                      "type": "listItem",
                    },
                  ],
                  "type": "bulletList",
                },
              ],
              "type": "tableHeader",
            },
            {
              "attrs": {},
              "content": [
                {
                  "attrs": {
                    "level": 1,
                  },
                  "content": [
                    {
                      "text": "another-heading",
                      "type": "text",
                    },
                    {
                      "type": "hardBreak",
                    },
                  ],
                  "marks": [],
                  "type": "heading",
                },
              ],
              "type": "tableHeader",
            },
          ],
          "type": "tableRow",
        },
      ],
      "type": "table",
    },
  ],
  "type": "doc",
  "version": 1,
}
`;

exports[`transformIndentationMarks should remove indentation marks from headings inside table cells 1`] = `
{
  "content": [
    {
      "attrs": {
        "isNumberColumnEnabled": false,
        "layout": "default",
        "localId": "123",
      },
      "content": [
        {
          "content": [
            {
              "attrs": {},
              "content": [
                {
                  "attrs": {
                    "level": 1,
                  },
                  "content": [
                    {
                      "text": "text",
                      "type": "text",
                    },
                  ],
                  "marks": [],
                  "type": "heading",
                },
              ],
              "type": "tableCell",
            },
          ],
          "type": "tableRow",
        },
      ],
      "type": "table",
    },
  ],
  "type": "doc",
  "version": 1,
}
`;

exports[`transformIndentationMarks should remove indentation marks from headings inside table headers 1`] = `
{
  "content": [
    {
      "attrs": {
        "isNumberColumnEnabled": false,
        "layout": "default",
        "localId": "123",
      },
      "content": [
        {
          "content": [
            {
              "attrs": {},
              "content": [
                {
                  "attrs": {
                    "level": 1,
                  },
                  "content": [
                    {
                      "text": "text",
                      "type": "text",
                    },
                  ],
                  "marks": [],
                  "type": "heading",
                },
              ],
              "type": "tableHeader",
            },
          ],
          "type": "tableRow",
        },
      ],
      "type": "table",
    },
  ],
  "type": "doc",
  "version": 1,
}
`;
